edycja sekcji ulubionych artystów